--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -19,7 +19,7 @@ nav {
 .nav__container {
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     position: relative;
 }
@@ -51,10 +51,10 @@ nav {
     display: block;
     width: 1.2rem;
     height: 1.2rem;
-    background: red;
+    background: var(--color-primary);
     position: absolute;
     left: calc(50% - 0.6rem);
     transform: rotate(45deg);
-    margin-top: 0.9rem;
+    margin-top: 0.5rem;
 
 }
