--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -81,5 +81,25 @@ nav {
         top: 100%;
         right: 0;
         flex-direction: column;
+        gap: 0;
+    }
+
+    .active-nav, .active-nav::after {
+        display: none;
+    }
+
+    .nav__links li {
+        height: 4rem;
+        width: 100%;
+        box-shadow: -2rem 2rem 5rem rgba(0, 0, 0, 0.4);
+    }
+
+    .nav__links li a {
+        background-color: var(--color-primary);
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        padding: 1rem 5rem 1rem 3rem;
     }
 }
