--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -82,6 +82,7 @@ nav {
         right: 0;
         flex-direction: column;
         gap: 0;
+        perspective: 400p;
     }
 
     .active-nav, .active-nav::after {
