--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -24,3 +24,22 @@
     color: var(--color-secondary);
     font-weight: 400;
 }
+
+.main__header-left p {
+    margin: 1rem 0 3.5rem;
+    font-size: 1.1rem;
+}
+
+.main__header-right {
+    display: grid;
+    place-items: center;
+    position: relative;
+}
+
+.main__header-circle {
+    width: 25rem;
+    height: 25rem;
+    background: linear-gradient(75deg, var(--color-secondary), transparent);
+    border-radius: 50%;
+    position: absolute;
+}
