--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,6 +1,6 @@
 .main__header {
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
     display: grid;
     place-items: center;
     margin-top: 3rem;
@@ -42,12 +42,15 @@
     background: linear-gradient(75deg, var(--color-secondary), transparent);
     border-radius: 50%;
     position: absolute;
+    transition: var(--transition);
 }
 
 .main__header-image {
     position: relative;
 }
 
-.main__header:hover .main__header-circle {
+.main__header-right:hover .main__header-circle {
     filter: blur(15px);
 }
+
+
