--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,14 @@ img {
 .btn.sm:hover {
     background-color: var(--color-gray-100);
 }
+
+
+
+
+section {
+    margin-top: 10rem;
+}
+
+.section__head {
+    
+}
