--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -152,3 +152,13 @@
 .faq p {
     margin-top: 1.5rem;
 }
+
+
+
+/*=================== TESTIMONIALS ======================*/
+
+.testimonials {
+    width: 50rem;
+    margin-inline: auto;
+}
+
