--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -247,3 +247,37 @@ footer {
 .footer__container article p {
     margin-top: 0.5rem;
 }
+
+.footer__container article h4 {
+    margin-bottom: 0.6rem;
+    font-size: 1rem;
+}
+.footer__socials {
+    margin-top: 1.5rem;
+    display: flex;
+}
+
+.footer__socials a {
+    background: var(--color-gray-100);
+    padding: 0.7rem;
+    border: 1px solid transparent;
+    border-radius: 0.6rem;
+    transition: var(--transition);
+}
+
+.footer__socials a svg {
+    color: var(--color-gray-600);
+}
+
+.footer__socials a:hover {
+    border-color: var(--color-gray-100);
+    background: transparent;
+}
+
+.footer__copyright {
+    color: var(--color-gray-100);
+    text-align: center;
+    padding: 1.5rem 0;
+    border-top: 2px solid var(--color-primary);
+    margin-top: 5rem;
+}
