--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -146,3 +146,9 @@ nav {
         display: none;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .nav__container {
+        width: 100%;
+    }
+}
