--- a/src/index.css
+++ b/src/index.css
@@ -98,8 +98,6 @@ img {
 }
 
 
-
-
 section {
     margin-top: 10rem;
 }
@@ -157,6 +155,25 @@ section {
     margin-top: 1rem;
     display: block;
     font-weight: 300;
+}
+
+
+/*====================HEADER UNTERSEITEN=========================*/
+
+.header {
+    margin-top: 5rem;
+    height: 20rem;
+    overflow: hidden;
+    border-bottom: 2px solid var(--color-gray-400);
+}
+
+.header__container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: grid;
+    place-items: center;
+    background: black;
 }
 
 /*=================== MEDIA QUERIES (medium screens) =================*/
