--- a/src/index.css
+++ b/src/index.css
@@ -216,6 +216,10 @@ section {
     h2 {
         font-size: 1.6rem;
     }
+
+    .header__content {
+        width: 76%;
+    }
 }
 
 
@@ -225,5 +229,21 @@ section {
     h1 {
         font-size: 2.2rem;
         line-height: 1.3;
+    }
+    section {
+        margin-top: 7rem;
+    }
+
+    .header {
+        height: fit-content;
+    }
+
+    .header__content {
+        width: var(--container-width-md);
+        padding: 3rem 0;
+    }
+
+    .header__content p {
+        font-size: 0.85rem;
     }
 }
