--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -21,3 +21,36 @@
     grid-template-columns: 50% 40%;
     gap:10%;
 }
+
+/*MEDIA QUERIES (medium screen)*/
+@media screen and (max-width: 1024px) {
+    .about__section-image {
+        width: 60%;
+    }
+
+    .about__section-content h1 {
+        margin-bottom: 1.2rem;
+    }
+
+    .about__story-container, .about__vision-container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .about__vision .about__section-image {
+        grid-row: 1;
+    }
+}
+
+
+/*MEDIA QUERIES (small screen)*/
+@media screen and (max-width: 600px) {
+    .about__section-image {
+        width: 80%;
+        margin-inline: auto;
+    }
+
+    .about__story-container, .about__vision-container {
+        gap: 2rem;
+    }
+}
