--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -13,12 +13,13 @@
 
 .about__story-container {
     display: grid;
-    grid-template-columns: 40% 50%;
+    grid-template-columns: 50% 40%;
     gap: 10%;
 }
 
 .about__vision-container {
-    grid-template-columns: 50% 40%;
+    display: grid;
+    grid-template-columns: 40% 50%;
     gap:10%;
 }
 
