--- a/src/pages/podcast/podcast.css
+++ b/src/pages/podcast/podcast.css
@@ -5,4 +5,18 @@
 
 .podcast__wrapper h1 {
     align-items: center;
+    text-align: center;
+}
+
+.podcast__wrapper h2 {
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.podcast__wrapper p {
+    margin-bottom: 4rem;
+}
+
+.podcast__spotify {
+    margin-bottom: 4rem
 }
