--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
 :root {
     --primary-hue: 210;
     --gray-hue: 240;
-    --color-primary: hsl(var(--primary-hue), 100%, 50%);
+    --color-primary: #a22111;
     --color-primary-variant: hsl (var(--primary-hue), 100%, 65%)
-    --color-secondary: #ffffff;
+    --color-secondary: #a22111;
     --color-gray-100: hsl(var(--gray-hue), 47%, 94%);
     --color-gray-200: hsl(var(--gray-hue), 26%, 75%);
     --color-gray-300: hsl(var(--gray-hue), 24%, 64%);
@@ -30,7 +30,7 @@
 /* GENERAL STYLES */
 
 body {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Poppins", sans-serif;
     color: var(--color-gray-200);
     line-height: 1.7;
     overflow-x: hidden;
