--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@
     --primary-hue: 210;
     --gray-hue: 240;
     --color-primary: #a22111;
-    --color-primary-variant: hsl (var(--primary-hue), 100%, 65%)
-    --color-secondary: #a22111;
+    --color-primary-variant: hsl (var(--primary-hue), 100%, 65%);
+    --color-secondary: grey;
     --color-gray-100: hsl(var(--gray-hue), 47%, 94%);
     --color-gray-200: hsl(var(--gray-hue), 26%, 75%);
     --color-gray-300: hsl(var(--gray-hue), 24%, 64%);
