--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@
     --primary-hue: 210;
     --gray-hue: 240;
     --color-primary: #a22111;
-    --color-primary-variant: hsl (var(--primary-hue), 100%, 65%);
-    --color-secondary: grey;
+    --color-primary-variant: #b6ada3;
+    --color-secondary: #2e2e2e;
     --color-gray-100: hsl(var(--gray-hue), 47%, 94%);
     --color-gray-200: hsl(var(--gray-hue), 26%, 75%);
     --color-gray-300: hsl(var(--gray-hue), 24%, 64%);
@@ -31,10 +31,10 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    color: var(--color-gray-200);
+    color: #2e2e2e;
     line-height: 1.7;
     overflow-x: hidden;
-    background: var(--color-gray-600);
+    background: #e7e7e7;
 }
 
 .container {
@@ -46,7 +46,7 @@ body {
 h1, h2, h3, h4, h5 {
     font-family: "BEBAS NEUE";
     line-height: 1.2;
-    color: var(--color-gray-100);
+    color: #2e2e2e;
 }
 
 h1 {
@@ -69,7 +69,7 @@ img {
 
 
 .btn {
-    color: var(--color-gray-100);
+    color: #e7e7e7;
     width: fit-content;
     margin: 0 auto;
     padding: 0.9rem 2rem;
@@ -118,7 +118,7 @@ section {
 }
 
 .card {
-    background: var(--color-gray-500);
+    background: #b6ada3;
     border: 2px solid transparent;
     text-align: center;
     padding: 3rem 2rem;
