--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ body {
     line-height: 1.7;
     overflow-x: hidden;
     background: #e7e7e7;
+    background-image: url(assets/noise.svg);
 }
 
 .container {
