--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -37,9 +37,9 @@
 }
 
 .main__header-circle {
-    width: 25rem;
-    height: 25rem;
-    background: linear-gradient(75deg, var(--color-secondary), transparent);
+    width: 40rem;
+    height: 40rem;
+    background: linear-gradient(75deg, #a22111, transparent);
     border-radius: 50%;
     position: absolute;
     transition: var(--transition);
