--- a/src/components/latestepisode.css
+++ b/src/components/latestepisode.css
@@ -21,3 +21,9 @@
 .episode a {
     color: #a22111;
 }
+
+@media screen and (max-width: 600px) {
+    .episodes__container {
+        grid-template-columns: 1fr;
+    }
+}
