--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -243,6 +243,10 @@ footer {
     gap: 6rem;
 }
 
+.footer__container h1 {
+    color: #e7e7e7;
+}
+
 .footer__container article {
     display: flex;
     flex-direction: column;
