--- a/src/pages/references/references.css
+++ b/src/pages/references/references.css
@@ -1,9 +1,7 @@
-.projects {
+.projects__container {
     display: grid;
-    place-items: center;
-    top: 0;
-    left: 0;
-    z-index: 99;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4rem;
 }
 
 img {
