--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     --primary-hue: 210;
     --gray-hue: 240;
     --color-primary: #a22111;
-    --color-primary-variant: #b6ada3;
+    --color-primary-variant: #bbbdbf;
     --color-secondary: #2e2e2e;
     --color-secondary-variant: #e7e7e7;
     --color-gray-100: hsl(var(--gray-hue), 47%, 94%);
@@ -81,7 +81,7 @@ img {
 }
 
 .btn:hover {
-    background: var(--color-secondary);
+    background: var(--color-primary);
     color: var(--color-secondary-variant)
 }
 
@@ -130,7 +130,7 @@ section {
 
 .card:hover {
     background: transparent;
-    border-color: var(--color-gray-400);
+    border-color: var(--color-primary);
     cursor: default;
 }
 
@@ -138,7 +138,7 @@ section {
     width: 3rem;
     height: 3rem;
     background: var(--color-primary);
-    color: var(--color-gray-100);
+    color: var(--color-secondary-variant);
     font-size: 1.5rem;
     padding: 0.8rem;
     display: grid;
@@ -150,9 +150,10 @@ section {
 }
 
 .card:hover span {
-    background: var(--color-secondary);
-    color: var(--color-gray-600);
+    background: var(--color-secondary-variant);
+    color: var(--color-primary);
 }
+
 
 .card small {
     margin-top: 1rem;
@@ -167,7 +168,7 @@ section {
     margin-top: 5rem;
     height: 20rem;
     overflow: hidden;
-    border-bottom: 2px solid var(--color-gray-400);
+    border-bottom: 2px solid var(--color-primary);
 }
 
 .header__container {
