--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -66,8 +66,16 @@
     margin-top: 4rem;
 }
 
+.offers__offer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .offers__offer small {
     text-align: justify;
+    flex-grow: 1;
+    overflow: hidden;
 }
 
 
@@ -82,6 +90,7 @@
     background: var(--color-secondary-variant);
     color: var(--color-secondary);
 }
+
 
 
 /*========== VALUES ==========*/
