--- a/src/pages/references/references.css
+++ b/src/pages/references/references.css
@@ -4,6 +4,14 @@
     gap: 4rem;
 }
 
+.projects__list a {
+    margin-top: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 img {
     width: 20%;
 }
+
