--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -258,7 +258,7 @@ footer {
 
 .footer__container h1 {
     color: #e7e7e7;
-    margin-bottom: -0.5rem;
+    margin-bottom: 0;
 }
 
 .footer__container article {
@@ -303,6 +303,9 @@ footer {
     margin-top: 5rem;
 }
 
+.footerlogo {
+    margin-top: -0.5rem;
+}
 
 /*=================== MEDIA QUERIES (medium screens) =================*/
 
