--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -115,6 +115,7 @@
 }
 
 .values__wrapper {
+    margin-top: 4rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 3.4rem 2.4rem;
