--- a/src/pages/references/references.css
+++ b/src/pages/references/references.css
@@ -1,3 +1,12 @@
+.projects_h {
+    text-align: center;
+}
+
+.projects_h p {
+    text-align: justify;
+    margin-bottom: 5rem;
+}
+
 .projects__container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -20,3 +29,11 @@ img {
     width: 20%;
 }
 
+@media only screen and (max-width: 767px) {
+    
+    .projects__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        margin-top: 3rem;
+    }
+    }
