--- a/pages/references/references.css
+++ b/pages/references/references.css
@@ -2,6 +2,15 @@
     text-align: center;
 }
 
+.project__list img {
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+.project__list img:hover{
+    opacity: 50%;
+}
+
 .projects_h p {
     text-align: justify;
     margin-bottom: 5rem;
