--- a/pages/Projects/project.css
+++ b/pages/Projects/project.css
@@ -1,3 +1,28 @@
+.project__container h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.mundraub-video-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+.mundraub-video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+.project__container p {
+    margin-bottom: 3rem;
+    text-align: justify;
+}
 
 /* ADB*/
 
@@ -22,4 +47,54 @@
     display: list-item;
     list-style-type: disc;
     list-style-position: inside;
+}
+
+
+/* MEDIA QUERIES (MEDIUM) */
+
+
+@media screen and (max-width: 1024px) {
+
+    .project__container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .project__container h1 {
+        margin-top: 1.5rem;
+    }
+
+    .mundraub-container {
+        order: 2;
+    }
+
+    .mundraub-video-container {
+        order: 1;
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%;
+        margin-bottom: 4rem;
+    }
+
+    .mundraub-video-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
+    }
+
+
+}
+
+
+@media screen and (max-width: 700px) {
+    .video-container {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        max-width: 100%;
+    }
 }
