--- a/pages/podcast/podcast.css
+++ b/pages/podcast/podcast.css
@@ -112,6 +112,7 @@
         height: fit-content;
         grid-template-columns: 1fr;
         align-items: center;
+        margin-bottom: 5rem;
     }
     
     .podcast__section-content h1 {
@@ -122,6 +123,10 @@
         margin-bottom: -5rem;
     }
 
+    .pcontenttwo {
+        margin-top: 10rem;
+    }
+    
     .podcast__section-content {
         display: flex;
         flex-direction: column;
