--- a/components/navbar.css
+++ b/components/navbar.css
@@ -10,7 +10,12 @@ nav {
     z-index: 99;
 }
 
+.navbar__middle {
+    display: none;
+}
+
 /* only shows on medium and small screens */
+
 
 .nav__toggle-btn {
     display: none;
@@ -65,6 +70,21 @@ nav {
 /* MEDIA QUERIES (medium and small screens) */
 
 @media screen and (max-width: 1024px) {
+
+    .navbar__middle {
+        display: block;
+        text-align: center;
+        color: var(--color-secondary-variant);
+        font-size: larger;
+        font-weight: 400;
+        margin-right: 2rem;
+    }
+
+    .nav__container .logo {
+        width: auto;
+        margin-right: -3rem;
+    }
+
     .nav__toggle-btn{
         display: inline-block;
         background: transparent;
@@ -148,3 +168,12 @@ nav {
     }
 }
 
+@media screen and (max-width: 600px) {
+    .navbar__middle {
+        display: block;
+        text-align: center;
+        color: var(--color-secondary-variant);
+        font-weight: 200;
+        font-size: small;
+    }
+}
