--- a/components/slide.css
+++ b/components/slide.css
@@ -26,9 +26,9 @@
     width: 100px;
     height: 100px;
     background-color: red;
-    border-radius: 6px;
+    /* border-radius: 6px; */
     position: absolute;
-    left: calc(200px * 8);
+    left: max(calc(200px * 8), 100%);
     animation-name: scrollleft;
     animation-duration: 30s;
     animation-timing-function: linear;
