--- a/pages/podcast/podcast.css
+++ b/pages/podcast/podcast.css
@@ -1,7 +1,29 @@
+
+
+.podcast-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr; 
+    gap: 20px;
+
+}
+
+.podcast__section-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .podcast__section-image {
-    border-radius: 20%;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.podcast__section-image video {
     width: 100%;
+    height: auto;
+    max-height: 50%; 
+    object-fit: contain;
 }
 
 .videoTag__Podcast {
@@ -25,18 +47,13 @@
     margin-bottom: 3rem;
 }
 
-.podcast-container {
-    display: grid;
-    grid-template-columns: 40% 40%;
-    gap: 20%;
-    margin-bottom: 5rem;
-}
 
-.podcast__container {
+
+/* .podcast__container {
     display: grid;
     place-items: center;
     margin-bottom: 5rem;
-}
+} */
 
 .podcast__wrapper h1 {
     align-items: center;
